--- a/cv.tex
+++ b/cv.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt,]{scrartcl}
+\documentclass[12pt,parskip=half]{scrartcl}
 \usepackage{longtable}
 \usepackage{lmodern}
 \usepackage{multicol}
@@ -38,7 +38,7 @@
 \let\oldsubparagraph\subparagraph
 \renewcommand{\subparagraph}[1]{\oldsubparagraph{#1}\mbox{}}
 \fi
-
+\usepackage{parskip}
 % set default figure placement to htbp
 \makeatletter
 \def\fps@figure{htbp}
@@ -52,7 +52,7 @@
 \usepackage{multirow}
 \usepackage{xcolor}
 \definecolor{cvlinkcolor}{RGB}{6,125,233}
-\hypersetup{colorlinks,linkcolor=cvlinkcolor,citecolor=cvlinkcolor,urlcolor=cvlinkcolor,bookmarksnumbered,bookmarks=false,pdfinfo={Title={Curriculum Vitae},Author={Lighton Phiri},Creator={Lighton Phiri},Subject={Curriculum Vitae},Keywords={Curriculum Vitae},CreationDate={D:20150513232724}}}
+\hypersetup{colorlinks,linkcolor=cvlinkcolor,citecolor=cvlinkcolor,urlcolor=cvlinkcolor,bookmarksnumbered,pdfinfo={Title={Curriculum Vitae},Author={Lighton Phiri},Creator={Lighton Phiri},Subject={Curriculum Vitae},Keywords={Curriculum Vitae},CreationDate={D:20150513232724}}}
 \renewcommand\labelenumi{[\theenumi]}
 
 \date{}
@@ -68,14 +68,15 @@
   
   & & \\
   
-Principal Platform Architect (AI, HPC, Cloud) & \multicolumn{1}{r}{Linkedin:\;\;}  & \multicolumn{1}{l}{\href{https://www.linkedin.com/in/mansura-h-a0174a19}{@MansuraHabiba}} \\
+Principal Architect (AI, HPC, Cloud) & \multicolumn{1}{r}{Linkedin:\;\;}  & \multicolumn{1}{l}{\href{https://www.linkedin.com/in/mansura-h-a0174a19}{@MansuraHabiba}} \\
   
-  IBM in Ireland, Dublin, Ireland & \multicolumn{1}{r}{Email:\;\;} &\multicolumn{1}{l}{\href{}{}} \\
+IBM in Ireland, Dublin, Ireland & \multicolumn{1}{r}{Email:\;\;} &\multicolumn{1}{l}{} \\
 
 
   Patents, Publications are listed in \href{https://scholar.google.com/citations?user=oee3rpwAAAAJ}{Google Scholar} & \multicolumn{1}{r}{twitter:\;\;}  & \multicolumn{1}{l}{\href{https://twitter.com/MansuraHabiba}{@MansuraHabiba}} \\
 
-Published book: \href{https://packt.link/a/9781803248318}{Hybrid Cloud Infrastructure and Operations Explained} & \multicolumn{1}{r}{ Badges:\;\;}  & \multicolumn{1}{l}{\href{https://www.credly.com/users/mansura-habiba/badges}{Professional Badges in Credly}}\\
+Published book: \href{https://packt.link/a/9781803248318}{Hybrid Cloud Infrastructure and Operations Explained}, \href{https://leanpub.com/emergence-agentic-ai}{Emergence of Agentic AI}, \href{https://leanpub.com/mastering-ai-operations}{Mastering AI Platforms: From Setup to Advanced Operations
+} & \multicolumn{1}{r}{ Badges:\;\;}  & \multicolumn{1}{l}{\href{https://www.credly.com/users/mansura-habiba/badges}{Professional Badges in Credly}}\\
 
  & \multicolumn{1}{r}{ Mobile No:\;\;}  & \multicolumn{1}{l}{+353899822405}\\
 \end{tabular}%
@@ -86,39 +87,39 @@ Published book: \href{https://packt.link/a/9781803248318}{Hybrid Cloud Infrastru
 
 \section*{Who is Mansura?}
 
-Mansura has 15+ years of experience in the technology industry. She has played the role of cloud-native solutions architect, technical lead, lead engineer and software engineer. She has experience in solution design, application development, innovation, research and development. She is experienced in different industries, such as software design and development, telecommunication, healthcare, finance and banking, workforce, and energy. She is highly skilled in Artificial Intelligence, hybrid cloud, OpenShift, cloud-native development and solution design, Platform Architecture design and platform engineering.  She is an Open Group Certified Architect and has several public cloud certifications. She is also a certified IBM Cloud and Cloud PAK Systems architect.
+Mansura Habiba is a seasoned technology leader with over \textbf{15 years of experience} in \textbf{AI architecture, cloud-native development, platform engineering}, and \textbf{solution design} across industries including \textbf{finance, healthcare, telecommunications, energy}, and the \textbf{public sector}. She has held pivotal roles as a \textbf{Principal Architect, AI Technical Advocate, Technical Lead}, and \textbf{Cloud-native Engineer}, delivering innovation at scale for some of the world’s most complex enterprise platforms.
 
-While at IBM (2014-Present), she played different roles as a software engineer, technical lead, solution architect, and platform architect for AI and HPC platforms. She is active in the IBM mentoring program and regularly helps others by mentoring them on technology skills and providing career guidance. She has participated in several IBM Academy of Technology (AoT) initiatives and exhibits thought leadership. She has presented several talks for both internal and external audiences. She has won different awards at IBM and in her previous roles. She regularly participated in patent submission and idea sessions with fellow IBMers. She is also involved in various innovation initiatives at IBM, including emerging technologies such as deep learning, artificial intelligence, big data, image processing, and blockchain.
+At \textbf{IBM (2014–Present)}, she has led high-impact initiatives as part of the \textbf{AI Elite Team}, shaping the strategic direction of IBM’s AI-powered products and hybrid cloud platforms. She currently drives the integration of \textbf{Generative AI} into high-performance cloud operations—enhancing observability, self-healing, security, and platform scalability for global clients, including top-tier banks, automakers, and energy providers.
 
-She is currently playing the role of a Lead Platform architect for complex Cloud solution-focused opportunities involving multiple disciplines or business units in IBM. She provides leadership and direction to high-priority or special projects the business undertakes. She leads the operation and management engineering process optimisation by implementing GenAI for different operations activities, i.e. providing continuous observability, troubleshooting, self-healing and optimization of the HPC platform. Currently, she is also responsible for defining the SLAs, practices, processes, tools, and technical foundation of IBM's managed services for platform operations. She leds the platform engineering and operations for some of the world's largest organizations, including the top 5 global banks, a leading car manufacturing company in Germany, and a significant energy and power grid supplier in the US. These platforms were deployed across IBM Cloud, AWS, and Azure, where she ensured the seamless integration of operations, compliance with SLAs, and continuous optimization of performance, security, and scalability. Her role also involved overseeing the end-to-end architecture and managing cross-functional teams to meet the complex requirements of these industries. She is leading the delivery engineering team for various operations and engineering activities (i.e. modernization, containerization, Automation validation, Patching, Security and Privacy management and others), including a team of 45 members across the globe in India, China, Mexico and Egypt In addition, she is also responsible for presenting the customer with suitable recommendations for IT management and appropriate technological alternatives and evaluating new technological developments and evolving business requirements.
+Mansura is an \textbf{Open Group Certified Architect}, holds \textbf{multiple public cloud certifications} (including IBM Cloud, Cloud Paks, AWS, and Azure), and has authored several books on \textbf{MLOps, AI AgentOps}, and \textbf{Cloud Governance}. She earned a \textbf{Ph.D. in Deep Learning}, with published research in secure cloud architecture, AI for natural disaster management, and applied machine learning.
 
-She has completed her PhD in deep learning and has published several research papers on secured cloud-based architecture, natural disaster management systems, and other applications. 
+Her contributions include:
+\begin{itemize}
+    \item \textbf{12+ patents} (filed/granted) in areas such as Neural Networks, Quantum Computing, Blockchain, Generative AI, and Sustainable Technology
+    \item \textbf{3 Books} on Hybrid Cloud, Agentic AI and Ai Operations.
+    \item \textbf{Editorial board member} and \textbf{IEEE reviewer} for international journals and conferences
+    \item \textbf{Speaker} at multiple internal and external technology forums
+    \item \textbf{Mentor} in IBM’s global mentoring program, supporting both technical skill development and career growth
+\end{itemize}
 
-Mansura Habiba is a published author focusing strongly on AI and cloud technologies. Her most recent book, "Hybrid Cloud Infrastructure and Operations Explained: Accelerate Your Application Migration and Modernization Journey on the Cloud with IBM and Red Hat" (2022), provides comprehensive insights into cloud architecture, cloud migration strategies, and how businesses can leverage IBM and Red Hat technologies for modernization. It is an essential guide for organizations looking to enhance their cloud capabilities and streamline their infrastructure.
+She combines deep technical acumen with a passion for responsible AI innovation. Her work continues to influence \textbf{platform modernization, AI governance}, and \textbf{enterprise transformation} across IBM and its global client base.
 
-Currently, Mansura is working on a new book that delves into the intersection of AI operations and cloud platforms. This upcoming work will explore how organizations can implement and scale AI-driven solutions within cloud environments, tackling key challenges such as automation, cybersecurity, and real-time analytics. With her deep expertise in AI, high-performance computing, and cloud strategy, the book aims to offer practical insights and strategies for organizations to realize the full potential of AI in cloud-based architectures.
-
-She is also a reviewer and editorial board member for several IEEE journals and conference publications, including multiple international journals. So far, she has filed twelve patents on Neural Networks, Workload Migration, Security, Blockchain, Quantum computing, Edge computing, and Sustainability. She also has some patents currently under review on Generative AI. 
-
-For her next role, Mansura Habiba aims to take on a leadership position as a Technical Lead, where she can guide AI adoption across various products to address real-world challenges. Her focus will be on creating practical, agile AI solutions that are both scalable and ethically sound. Drawing on her extensive experience in AI architecture and cloud-based operations, Mansura seeks to drive innovation while ensuring that AI is applied responsibly and with clear business impact. This role would allow her to combine her technical expertise with her passion for solving complex problems through cutting-edge technology.
 
 \vspace{0.3cm}
 
 \section*{Key Skills}
 \begin{itemize}
 
-    \item \textbf{Managed Operations:} Leading large-scale enterprise platform operations on cloud (AWS, Azure, IBM Cloud and GCP), optimizing costs, improving security, and ensuring performance and leading incident management including critsit and Major Incident Management (MIM). Leading the design and implementation of central observability solutions using Grafana, Instana, DataDog, and cloud-native monitoring. Hands-on experience in implementing automation for 24/7 operations using Ansible and Terraform.
-    \item \textbf{High-Performance Computing (HPC):} Design and optimization of HPC platforms, implementing AI-driven automation and observability for workload management. Hands-on experience in Symphony, Scale, LSF and other HPC software.
-    \item \textbf{Generative AI \& AI Strategy:} Implemented AI workflows for automated cloud operations, contributing to \$500K annual cost savings.
-    \item \textbf{Artificial Intelligence Core Competencies:} Expertise in CNNs, RNNs, GANs, Neural ODEs, LSTMs, and Transformer models. Also experienced with NLP tools such as SpaCy, NLTK, Hugging Face, and IBM Watson. She has strong experience in Tensorflow, Pytorch, jupyter, Jax, numpy and other libraries. She has Hands-on experience in in anomaly detection, threat detection, and automated incident response using AI.
-    \item \textbf{AI Tools \& Platforms}: Hands-on experience in TensorFlow, PyTorch, Keras, Scikit-learn,  IBM Watson, AWS SageMaker, Google AI Platform, and Microsoft Azure AI. She is skilled in model deployment with Docker and Kubernetes and automation of ML pipelines using Kubeflow and MLflow. She has Hands-on experience in data preprocessing, feature engineering, and handling large datasets using Pandas, NumPy, and Spark.
-    \item \textbf{AI Strategy \& Leadership}: Experience in leading AI adoption strategies aligned with business goals and operational efficiency. She led the development and adoption of AI for the platform engineering operations using AIOps. 
+    \item \textbf{AI Advocacy \& Enterprise Enablement:} As a lead in IBM’s AI Elite Team, drives enterprise AI adoption by aligning IBM's AI capabilities with client needs through strategic solutioning, architectural leadership, technical workshops, and stakeholder engagement. Translates complex AI concepts into business value for large-scale transformation.     
+    \item \textbf{Platform \& Operations Management:} Led global enterprise platform operations across AWS, Azure, IBM Cloud, and GCP. She specializes in cost optimization, security hardening, incident management (including MIM/critsits), and designing observability solutions using Grafana, Instana, DataDog, and native cloud tools.
+    
+    \item \textbf{High-Performance Computing (HPC):} Designed and optimized AI-enhanced HPC platforms using IBM Symphony, Scale, and LSF, incorporating automation and observability to improve workload efficiency and reduce downtime.
 
+    \item \textbf{AI Tools \& Platforms}: Hands-on experience in TensorFlow, PyTorch, Keras, Scikit-learn,  IBM Watson, AWS SageMaker, Google AI Platform, and Microsoft Azure AI. She is skilled in model deployment with Docker and Kubernetes and automation of ML pipelines using Kubeflow and MLflow. She has Hands-on experience in data preprocessing, feature engineering, and handling large datasets using Pandas, NumPy, and Spark.
+    \item \textbf{AI Strategy \& Execution:} Led implementation of AI workflows in cloud operations, delivering \$500K+ annual cost savings. Deep experience in AIOps, anomaly detection, threat analysis, and automated remediation using Generative AI and ML models.
     \item \textbf{Site Reliability Engineering :} Led SRE team of 45 engineers for the world's largest Banking, automobile, and energy supplier clients. Define SRE practice and standards, perform maturity analysis for the organization and team and define the roadmap for improvement.   
     
     \item \textbf{Software Development:} Proficient in Java, Python, C++, R, and Go for distributed computing, RESTful API, Neural network Modelling, MLOPs, DevOps, Container platform, e.g. Docker, Kubernetes and OpenShift; and cloud-native applications development.
-    
-    \item \textbf{Leadership:} Proven ability to lead cross-functional global teams (45+ members), driving projects across finance, government, telecom, and healthcare industries.
 \end{itemize}
 
 
@@ -137,13 +138,26 @@ Thesis: Exploring Cloud-Based Disaster Management
 
 \section*{Professional Experience}
 
-\subsection*{Principal Platform Architect, AI and HPC platform, Hybrid Cloud Management Managed Service, IBM | 07/2022 -- Present}
+\subsection*{Principal Architect, IBM AI Elite Team, IBM Software | 04/2025 -- Present}
+\begin{itemize}
+    \item Serving as one of the leads in IBM’s AI Elite Team, responsible for defining the future strategy of IBM’s AI-enabled software, platforms, and practices.
+    \item Collaborates closely with software development and sales teams to promote IBM’s enterprise AI capabilities and educate clients on AI adoption strategies.
+    \item Leads architectural discussions and helps shape the technical trajectory of IBM’s AI portfolio by identifying and aligning solutions with client needs.
+    \item Conducts technical workshops and solutioning sessions with enterprise clients to demonstrate the value of AI-driven transformation.
+    \item Applies deep knowledge of AI technologies, including IBM’s proprietary offerings, to provide thought leadership and insights into the competitive landscape.
+    \item Bridges interdisciplinary teams across AI, cloud, and software engineering to foster integrated, scalable solutions for clients.
+    \item Communicates complex AI and technical concepts effectively to both technical and business stakeholders, enabling clear decision-making and strategy alignment.
+    \item Evaluates emerging AI technologies and evolving business requirements to provide recommendations on IT operations and architectural improvements.
+\end{itemize}
+
+
+\subsection*{Principal Platform Architect, AI and HPC platform, Hybrid Cloud Management Managed Service, IBM | 07/2022 -- 04/2025}
 \begin{itemize}
    \item Led the design, development, and implementation of platform engineering solutions using various cutting-edge technologies, including cloud platforms, AI, and container orchestration systems, to meet the needs of large-scale enterprises.
    \item Led the design and architecture of managed services platforms across IBM Cloud, AWS, and Azure for high-profile clients, including top 5 global banks, a leading German car manufacturer, and a major US energy and power grid supplier.
-    \item Led design and implementation of central observability solution, automation for 24X7 operations for the platform to keep the up-time maximum.
-    \item Led the operation and management engineering process optimisation by implementing GenAI for different operations activity, i.e. providing continuous observability, troubleshooting, self-healing and optimization of the HPC platform. 
-    \item Led delivery engineering team for different operations and engineering activities (i.e. modernization, containerization, Automation validation, Patching, Security and Privacy management and others), including a team of 45 members across the globe in India, China, Mexico and Egypt. 
+    \item Led design and implementation of central observability solution, automation for 24/7 operations for the platform to keep the uptime maximum.
+    \item Led the operation and management engineering process optimisation by implementing GenAI for different operations activities, i.e., providing continuous observability, troubleshooting, self-healing, and optimization of the HPC platform. 
+    \item Led delivery engineering team for different operations and engineering activities (i.e., modernization, containerization, Automation validation, Patching, Security and Privacy management, and others), including a team of 45 members across the globe in India, China, Mexico, and Egypt. 
     \item Spearheaded designing and implementing AI-driven HPC solutions for IBM clients, optimizing performance and reducing operational costs.
     
     \item Established and defined key performance indicators (KPIs) and service-level agreements (SLAs) to scale businesses, ensuring transparency and reporting to senior leadership.
@@ -151,7 +165,7 @@ Thesis: Exploring Cloud-Based Disaster Management
 \item Led the implementation of centralized proactive monitoring and continuous improvement processes to maintain high operational standards and minimize downtime.
 \item Developed end-to-end system designs that focused on performance, security, and scalability to meet industry-specific requirements.
 
-\item Designed and Implemented features for operation management using AWS, IBM Cloud, Azure cloud services, OpenShift and Kubernetes container platform in addition to Ansible on the RedHat Ansible Automation Platform.
+\item Designed and implemented features for operation management using AWS, IBM Cloud, Azure cloud services, OpenShift, and Kubernetes container platform in addition to Ansible on the RedHat Ansible Automation Platform.
 
     \item Led multiple workstreams across functional and geographic divisions, aligning platform engineering efforts with larger business strategies and ensuring consistent execution and delivery.
 \item Drove cross-functional collaboration between AI, cloud, and software engineering teams, ensuring seamless integration of solutions across divisions.
@@ -163,7 +177,7 @@ Thesis: Exploring Cloud-Based Disaster Management
     \item Collaborated with reference architects and led technical engagements, advising on cloud-native reference architectures and best practices.
     \item Developed roadmaps for cloud cost optimization and disaster recovery strategies using AWS, Azure and IBM Cloud Services.
     \item Managed large-scale OpenShift and Kubernetes deployments, ensuring seamless cloud migration and system modernization.
-    \item As the Offering Lead for IBM Platform Engineering Services and Center of Competency, Spearheaded the design, development, and implementation of platform engineering solutions using a variety of cutting-edge technologies, including cloud platforms, AI, and container orchestration systems, to meet the needs of large-scale enterprises.
+    \item As the Offering Lead for IBM Platform Engineering Services and Center of Competency, spearheaded the design, development, and implementation of platform engineering solutions using a variety of cutting-edge technologies, including cloud platforms, AI, and container orchestration systems, to meet the needs of large-scale enterprises.
     \item Provided strategic thinking and leadership in building scalable and resilient solutions for enterprise clients, ensuring alignment with both business and technological goals.
     \item Led the creation of roadmaps for AI and platform modernization solutions, ensuring these aligned with IBM's broader business objectives.
     \item Delivered executive-level updates to senior management on high-visibility projects and initiatives, ensuring timely communication and strategic alignment with company objectives.
@@ -252,7 +266,8 @@ Thesis: Exploring Cloud-Based Disaster Management
 \section*{Books}
 \begin{itemize}
     \item \textbf{Book:} \emph{Hybrid Cloud Infrastructure and Operations Explained}, Packt Publishing, 2022.
-    \item Published multiple research papers and patents on AI and cloud migration strategies.
+    \item \textbf{Book:} \emph{Mastering AI Platforms: From Setup to Advanced Operations}, Leanpub, 2024.
+    \item \textbf{Book:} \emph{Emergence of Agentic AI: Architecting the Next Generation of Intelligent Systems}, Leanpub, 2024.
 \end{itemize}
 
 \subsubsection{Book chapters}\label{book-chapters}
